--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -45,9 +45,9 @@ x++;
 
 function TalkToServer () {
 
-SetPlayer("550039706949","player4353","lobby2342",x + "," + y + ",0","0,0,0");
-GetPlayer("550039706949","player4353");
-GetPlayerList("550039706949","lobby2342");
+SetPlayer("SET YOUR API KEY HERE","player4353","lobby2342",x + "," + y + ",0","0,0,0");
+GetPlayer("SET YOUR API KEY HERE","player4353");
+GetPlayerList("SET YOUR API KEY HERE","lobby2342");
 
 // get the player data from the hidden datatag
 let playerdata = document.getElementById("player4353_datatag").innerHTML.split("|");
