--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -23,6 +23,8 @@
 <center>
 <button class="btn btn-primary" onclick="moveleft()">Move Left</button>
 <button class="btn btn-primary" onclick="moveright()">Move Right</button>
+  <button class="btn btn-primary" onclick="moveup()">Move Up</button>
+  <button class="btn btn-primary" onclick="movedown()">Move Down</button>
 <div style="padding: 10%; width: 100%;">
 <div id="player4353" style="padding: 1%; background-color: black; width: 1%;"></div>
 </div>
@@ -42,6 +44,16 @@ x--;
 function moveright () {
 x++;
 }
+  
+
+function movedown () {
+y--;
+}
+  
+function moveup () {
+y++;
+}
+
 
 function TalkToServer () {
 
